# ReDuCeFAPI

./: .dockerignore  .env  .env.prod  .env.test  .gitignore  Deduplicator.postman_collection.json  Dockerfile.celery  Dockerfile.fastapi  LICENSE  README.md  docker-compose.loadtest.yaml  docker-compose.yml  pyproject.toml
locust/: locustfile.py
src/: __init__.py  config.py
src/db/: redis.py
src/dependencies/: redis.py
src/routes/: ddup.py
src/schemas/: event.py
src/service/: ddup.py
src/worker/: app.py  tasks.py
